# freeipa-operator

./: .gitignore  BUILD.bazel  Dockerfile  Gopkg.toml  Makefile  PROJECT  README.md  WORKSPACE  go.mod  go.sum  main.go
api/: dispatcher.go
api/v1alpha1/: groupversion_info.go  ipacluster_types.go  server_status.go  zz_generated.deepcopy.go
cmd/manager/: BUILD.bazel  main.go
config/: BUILD.bazel
config/crd/: kustomization.yaml
config/crd/bases/: freeipa.coglative.com_ipaclusters.yaml
config/crd/patches/: cainjection_in_ipaclusters.yaml  webhook_in_ipaclusters.yaml
config/crds/: freeipa_v1alpha1_ipacluster.yaml
config/default/: kustomization.yaml
config/rbac/: rbac_role.yaml  role.yaml
config/samples/: freeipa_v1alpha1_ipacluster.yaml
controllers/: ipacluster_controller.go  ipacluster_controller_test.go  service.tmpl  suite_test.go
controllers/template/: pod-set.goyaml  service.goyaml  template_util.go
pkg/apis/: BUILD.bazel  addtoscheme_freeipa_v1alpha1.go  apis.go
pkg/apis/freeipa/: BUILD.bazel  group.go
pkg/apis/freeipa/v1alpha1/: BUILD.bazel  doc.go  ipacluster_types.go  ipacluster_types_test.go  register.go  v1alpha1_suite_test.go  zz_generated.deepcopy.go
pkg/controller/: BUILD.bazel  add_ipacluster.go  controller.go
pkg/controller/ipacluster/: BUILD.bazel  ipacluster_controller.go  ipacluster_controller_suite_test.go  ipacluster_controller_test.go  service.tmpl  template.go
pkg/webhook/: BUILD.bazel  webhook.go
