load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "addtoscheme_freeipa_v1alpha1.go",
        "apis.go",
    ],
    importpath = "github.com/briantopping/freeipa-operator/pkg/apis",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/freeipa/v1alpha1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
    ],
)
