load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "add_ipacluster.go",
        "controller.go",
    ],
    importpath = "github.com/briantopping/freeipa-operator/pkg/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/controller/ipacluster:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
    ],
)
